--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,10 @@ h6 {
 .hero {
   display: flex;
   align-items: center;
-  background-image: url("https://baby-games--hortencia718.repl.co/img/newpic.jpg");
-  background-repeat: repeat-x;
-  background-position: center center;
-  background-size: contain;
+  background-image: url("assets/img/background.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
   /* height: 50vh; */
   opacity: 0.7;
 }
@@ -54,7 +54,7 @@ h6 {
 
 .hero .hero-content .playBtn {
   cursor: pointer;
-  font-size: 20px;
+  font-size: 3em;
   font-family: "Mansalva";
   font-weight: 400;
   color: rgb(211, 106, 7);
